--- a/assignment/index.html
+++ b/assignment/index.html
@@ -7,7 +7,21 @@
     <!-- Create and link a CSS file! -->
   </head>
   <body>
+  <div style="background-color:black;color:white;padding:20px;">>
     <h1>Week 4 Assignment - Part 2</h1>
     <p>Check console for errors.</p>
+  </div>
+
+  <div>
+    <h2> My name is Nicholas Ilacqua </h2>
+    <h3> My source of tansportation is a 2013 hyundai sonata. This was our second biggest purchase at the time we bought it.
+         It has been a very reliable vehicle.
+    </h3>
+
+    <img src="https://www.truedelta.com/images/mk_reviews/1367192657-2013-Hyundai-Sonata-SE-front-quarter.JPG" alt="">
+  </div>
+
+
+
   </body>
 </html>
